[workspace]
members = [
    "./crates/fleetspeak",
    "./crates/fleetspeak-proto",
]
resolver = "3"

[workspace.package]
version = "0.4.2"
edition = "2024"

authors = ["Łukasz Hanuszczak <hanuszczak@google.com>"]
license = "MIT"

homepage = "https://github.com/google/fleetspeak-rs"
repository = "https://github.com/google/fleetspeak-rs"

[workspace.dependencies]
protobuf = { version = "3.7.1" }
protobuf-codegen = { version = "3.7.1" }
