[package]
name = "fleetspeak-proto"
version = "0.2.0"
description = "A Fleetspeak connector crate with Protocol Buffers messages."
license = "MIT"
authors = ["Łukasz Hanuszczak <hanuszczak@google.com>"]
homepage = "https://github.com/google/fleetspeak-rs"
documentation = "https://docs.rs/fleetspeak-proto"
repository = "https://github.com/google/fleetspeak-rs"
edition = "2018"

exclude = [
  "/fleetspeak/**",
  "!/fleetspeak/**/*.proto",
]

[dependencies]
protobuf = { version = "2.8.2" }

[build-dependencies]
protobuf-codegen-pure = { version = "2.8.2" }
