[package]
name = "fleetspeak-proto"
version = "0.2.0"
description = "A Fleetspeak connector crate with Protocol Buffers messages."
license = "MIT"
authors = ["Łukasz Hanuszczak <hanuszczak@google.com>"]
homepage = "https://github.com/google/fleetspeak-rs"
documentation = "https://docs.rs/fleetspeak-proto"
repository = "https://github.com/google/fleetspeak-rs"
edition = "2018"

exclude = [
  "/vendor/fleetspeak/**",
  "!/vendor/fleetspeak/**/*.proto",
]

[dependencies]
# TODO: We have to pin the dependency because of the internal build process.
# This is not ideal and should be lifted in the future.
protobuf = { version = "=2.8.2" }

[build-dependencies]
# TODO: See the comment about pinning the `protobuf` package above.
protobuf-codegen-pure = { version = "=2.8.2" }
