[package]
name = "fleetspeak-proto"
version = "0.3.1"
description = "A Fleetspeak connector crate with Protocol Buffers messages."
license = "MIT"
authors = ["Łukasz Hanuszczak <hanuszczak@google.com>"]
homepage = "https://github.com/google/fleetspeak-rs"
documentation = "https://docs.rs/fleetspeak-proto"
repository = "https://github.com/google/fleetspeak-rs"
edition = "2018"

exclude = [
  "/vendor/**",
  "!/vendor/fleetspeak/**/*.proto",
  "!/vendor/protobuf/src/**/*.proto",
]

[dependencies]
protobuf = { version = "2.27.1" }

[build-dependencies]
protobuf-codegen-pure = { version = "2.27.1" }
