[package]
name = "fleetspeak-proto"

version.workspace = true
edition.workspace = true

authors.workspace = true
license.workspace = true

homepage.workspace = true
repository.workspace = true

description = "A Fleetspeak connector crate with Protocol Buffers messages."
documentation = "https://docs.rs/fleetspeak-proto"

exclude = [
  "/vendor/**",
  "!/vendor/fleetspeak/**/*.proto",
  "!/vendor/protobuf/src/**/*.proto",
]

[dependencies]
protobuf = { version = "2.27.1" }

[build-dependencies]
protobuf-codegen-pure = { version = "2.27.1" }
