[package]
name = "fleetspeak-proto"

version.workspace = true
edition.workspace = true

authors.workspace = true
license.workspace = true

homepage.workspace = true
repository.workspace = true

description = "A Fleetspeak connector crate with Protocol Buffers messages."
documentation = "https://docs.rs/fleetspeak-proto"

exclude = [
  "/vendor/**",
  "!/vendor/fleetspeak/**/*.proto",
  "!/vendor/protobuf/src/**/*.proto",
]

[dependencies]
protobuf = { workspace = true }

[build-dependencies]
protobuf-codegen = { workspace = true }
