[package]
name = "fleetspeak"

version.workspace = true
edition.workspace = true

authors.workspace = true
license.workspace = true

homepage.workspace = true
repository.workspace = true

description = "A Fleetspeak client connector library for the Rust language."
documentation = "https://docs.rs/fleetspeak"

exclude = [
    ".github/**",
]

[dependencies]
byteorder = { version = "1.3.4" }
fleetspeak-proto = { path = "../fleetspeak-proto", version = "0.3.0" }
lazy_static = { version = "1.4.0" }
log = { version = "0.4.8" }
protobuf = { version = "2.27.1" }
