[package]
name = "fleetspeak"

version.workspace = true
edition.workspace = true

authors.workspace = true
license.workspace = true

homepage.workspace = true
repository.workspace = true

description = "A Fleetspeak client connector library for the Rust language."
documentation = "https://docs.rs/fleetspeak"

[dependencies]
fleetspeak-proto = { path = "../fleetspeak-proto", version = "0.4.2" }
log = { version = "0.4.22" }
protobuf = { workspace = true }

[target.'cfg(target_family = "unix")'.dependencies]
libc = { version = "0.2.161" }

[target.'cfg(target_family = "windows")'.dependencies]
windows-sys = { version = "0.60.2", features = ["Win32_Foundation", "Win32_Storage_FileSystem", "Win32_System_IO"] }
